updated order, menu

--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -5,9 +5,10 @@
     text-transform: uppercase;
     color: #fff;
     text-decoration: none;
+    font-family: "Ubuntu-Medium";
     font-size: 13px;
 
-    &_background_black{
+    &_background_black {
        background: #000; 
     }
 }
