--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -1,12 +1,16 @@
 .btn {
     background: $red;
-    padding: 8px 15px;
-    border-radius: 5px;
+    padding: rem(8px) rem(15px);
+    border-radius: rem(5px);
     text-transform: uppercase;
     color: #fff;
     text-decoration: none;
     font-family: "Ubuntu-Medium";
-    font-size: 13px;
+    font-size: rem(13px);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    
 
     &_background_black {
        background: #000; 
