--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,45 +1,149 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @include tablets {
+    padding: 0 30px;
+  }
+}
+.logo {
+  display: block;
+  width: 100px;
+}
+.logo-img {
+  width: 100%;
 }
 .header__buttons {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-.menu__list {
-    display: flex;
-    align-items: center;
-}
-.menu__item {
-    display: flex;
-    align-items: center;
-    font-family: "Ubuntu-Medium";
-    font-size: 13px;
-    text-transform: uppercase;
-    &:last-child {
-        &:after {
-            display: none;
-        }
-    }
-    &::after {
-        content: '';
-        width: 6px;
-        height: 6px;
-        border-radius: 50%;
-        background: #fff;
-        display: inline-block;
-        margin: 0 10px;
 
+.nav {
+  &__list {
+    display: flex;
+    align-items: center;
+    @include tablets {
+      flex-direction: column;
+      align-items: center;
     }
+  }
+  @include tablets {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+
+    &.active {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
-.menu__link {
-    color: #fff;
-    text-decoration: none;
+
+.nav__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-family: "Ubuntu-Medium";
+  font-size: rem(13px);
+  text-transform: uppercase;
+  &:last-child {
+    &:after {
+      display: none;
+    }
+  }
+  &::after {
+    content: "";
+    width: rem(6px);
+    height: rem(6px);
+    border-radius: 50%;
+    background: #fff;
+    display: inline-block;
+    margin: 0 rem(10px);
+
+    @include tablets {
+      position: absolute;
+      margin: 0;
+      bottom: -10px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  @include tablets {
+    margin: 0 0 20px 0;
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
+.nav__link {
+  color: #fff;
+  text-decoration: none;
+}
+.hamburger-menu {
+  display: none;
+  @include tablets {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    span {
+      width: 20px;
+      height: 2px;
+      background-color: #fff;
+    }
+    &:before {
+      display: block;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 2px;
+      background-color: #fff;
+    }
+    &:after {
+      display: block;
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 20px;
+      height: 2px;
+      background-color: #fff;
+    }
+  }
+}
+.hamburger-menu.active {
+  span {
+    display: none;
+  }
+  &:before {
+    top: 10px;
+    transform: rotate(45deg);
+  }
+  &:after {
+    bottom: 8px;
+    transform: rotate(-45deg);
+  }
 }
 .arrow-down_img {
-    position: absolute;
-    top: 94.3%;
-    left: 50%;
-    transform: translate(-50%, 50%);
+  position: absolute;
+  top: 94.3%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: rem(30px);
+  height: rem(15px);
+}
+
+.hidden {
+  overflow: hidden;
 }
