--- a/css/blocks/how-we-work.scss
+++ b/css/blocks/how-we-work.scss
@@ -1,9 +1,14 @@
 .how-we-work {
     background: url("../../img/bg/how-we-work-bg.jpg") center center /cover no-repeat;
     width: 100%;
-    height: 100%;
 }
-.mtop_title {
-    margin-top: 82px;
-    color: $black;
+.video {
+    width: rem(640px);
+    height: rem(400px);
+    background-color: indianred;
+}
+.how-we-work__title {
+    @include tablets {
+        white-space: normal;
+    }
 }
