--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background: url("../../img/bg/menu-bg_big.jpg") center center / cover
+  background: url("../img/bg/menu-bg_big.jpg") center center / cover
     no-repeat;
   height: 100vh;
   min-height: rem(650px);
