--- a/css/blocks/fixed-menu.scss
+++ b/css/blocks/fixed-menu.scss
@@ -29,4 +29,13 @@
         border-radius: 50%;
         background: #fff;
     }
+    &:active {
+        border-color: #fff;
+    }
+}
+a.fixed__menu__link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: red; 
 }
