--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -1,5 +1,5 @@
 .team {
-    background: url("../../img/bg/team-bg.jpg") center center /cover no-repeat;
+    background: url("../img/bg/team-bg.jpg") center center /cover no-repeat;
     position: relative;
 }
 .team__wrapper {
